# signalk-ws-ha

./: .gitignore  CHANGELOG.md  LICENSE  README.md  hacs.json  pyproject.toml  requirements-dev.txt
.codex/: AGENTS.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  hassfest.yml  validate.yml
custom_components/signalk_ha/: __init__.py  auth.py  config_flow.py  const.py  coordinator.py  device_info.py  diagnostics.py  discovery.py  entity_utils.py  event.py  geo_location.py  identity.py  manifest.json  mapping.py  notifications.py  parser.py  rest.py  runtime.py  schema.py  sensor.py  strings.json  subscription.py
custom_components/signalk_ha/translations/: en.json
custom_components/signalk_ws/: __init__.py  config_flow.py  const.py  coordinator.py  diagnostics.py  geo_location.py  manifest.json  parser.py  sensor.py  strings.json  subscription.py
custom_components/signalk_ws/translations/: en.json
tests/: conftest.py  discovery_testdata.json  test_auth.py  test_config_flow.py  test_config_helpers.py  test_coordinator.py  test_diagnostics.py  test_discovery.py  test_event_entity.py  test_geo_location_entity.py  test_identity.py  test_mapping.py  test_notifications.py  test_parser.py  test_replay_real_data.py  test_rest.py  test_sensor_entity.py  test_sensor_helpers.py  test_setup_entry.py  test_ssl_context.py  test_staleness.py  test_subscription.py  test_throttling.py  test_ws_resubscribe.py  testdata.json  vessel_self_testdata.json
