[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-p no:pytest_socket --cov=custom_components/signalk_ha --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.coverage.run]
branch = true
source = ["custom_components/signalk_ha"]

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_covered = true
